--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
     <div class="sticky-header">
         <div class="header-container">
-            <h1 class="title">THE DATABASE</h1>
+            <h1 class="title">THE DATABASE (ADMIN)</h1>
             <div class="search-container">
                 <div class="search-group">
                     <input type="text" class="search-field" id="search" placeholder="SEARCH...">
